--- a/assets/editor.html
+++ b/assets/editor.html
@@ -378,7 +378,9 @@
             preamble>button,
             cell>button,
             cellinput>button,
-            clickshoulder {
+            clickshoulder,
+            footer,
+            runarea {
                 display: none !important;
             }
 
@@ -392,10 +394,6 @@
             #info::before {
                 content: "Generated using";
             }
-
-            footer {
-                display: none;
-            }
         }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.0/codemirror.min.css">
@@ -405,6 +403,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.0/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.0/mode/julia/julia.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.0/addon/hint/show-hint.min.js"></script>
+    <!-- <script src="/assets/show-hint.js"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.0/addon/hint/show-hint.min.css"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.0/addon/hint/anyword-hint.min.js"></script>
 
