🔗 @bind pluto Interactivity()

--- a/assets/editor.html
+++ b/assets/editor.html
@@ -599,6 +599,7 @@
         }
     </style>
     
+    <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.50.0/lib/codemirror.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.50.0/mode/julia/julia.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.50.0/addon/hint/show-hint.min.js"></script>
@@ -674,6 +675,7 @@
     </footer>
 
     <script src="/assets/editor.js"></script>
+    <script src="/assets/bond.js"></script>
     <script src="/assets/feedback.js"></script>
 
     <script>
