--- a/assets/editor.html
+++ b/assets/editor.html
@@ -281,7 +281,7 @@
 
         code {
             font-family: monospace;
-            font-size: .75rem;
+            font-size: .75em;
         }
 
         cell.error>code {
