--- a/assets/editor.html
+++ b/assets/editor.html
@@ -11,13 +11,13 @@
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96x96.png">
     <meta name="description" content="Pluto.jl notebook" />
 
-    <script src="/assets/client.js"></script>
-    <script src="/assets/filepicker.js"></script>
+    <script src="assets/client.js"></script>
+    <script src="assets/filepicker.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap');
         @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese');
@@ -611,7 +611,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.css"></script>
     
-    <link rel="stylesheet" href="/assets/light.css" />
+    <link rel="stylesheet" href="assets/light.css" />
     <!-- The instant feedback form at the bottom of the page uses Google Firestore to save feedback. We DO NOT use Google Analytics, and NO DATA is sent except for data entered in the feedback form. We might add telemetry in the future, and this will be an opt-in feature. -->
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-firestore.js"></script>
@@ -620,8 +620,8 @@
 <body class="loading no-MαθJax">
     <header>
         <div id="logocontainer">
-            <a href="/"><h1>
-                <img src="/assets/logo.svg" alt="Pluto.jl" /></h1></a>
+            <a href="./"><h1>
+                <img src="assets/logo.svg" alt="Pluto.jl" /></h1></a>
                 <filepicker>
 
                     <button>Rename</button>
@@ -673,9 +673,9 @@
         </div>
     </footer>
 
-    <script src="/assets/editor.js"></script>
-    <script src="/assets/bond.js"></script>
-    <script src="/assets/feedback.js"></script>
+    <script src="assets/editor.js"></script>
+    <script src="assets/bond.js"></script>
+    <script src="assets/feedback.js"></script>
 
     <script>
         MathJax = {
