--- a/assets/welcome.html
+++ b/assets/welcome.html
@@ -11,13 +11,13 @@
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96x96.png">
     <meta name="description" content="Pluto.jl notebook" />
     
-    <script src="/assets/client.js"></script>
-    <script src="/assets/filepicker.js"></script>
+    <script src="assets/client.js"></script>
+    <script src="assets/filepicker.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.js"></script>
@@ -25,18 +25,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.css"></script>
 
-    <link rel="stylesheet" href="/assets/welcome.css">
+    <link rel="stylesheet" href="assets/welcome.css">
 
 </head>
 
 <body class="loading nosessions">
     <div id="title">
-        <h1>welcome to <img src="/assets/logo.svg"><span class="phantom"> ot emoclew</span></h1>
+        <h1>welcome to <img src="assets/logo.svg"><span class="phantom"> ot emoclew</span></h1>
             <main>
             <p class="new">New session:</p>
             <ul class="new">
-                <li>Open a <a href="/sample">sample notebook</a></li>
-                <li>Create a <a href="/new">new notebook</a></li>
+                <li>Open a <a href="sample">sample notebook</a></li>
+                <li>Create a <a href="new">new notebook</a></li>
                 <li>Open from file:
                 <filepicker>
 
@@ -50,7 +50,7 @@
         </main>
     </div>
 
-    <script src="/assets/welcome.js"></script>
+    <script src="assets/welcome.js"></script>
 </body>
 
 </html>
