--- a/assets/sample.html
+++ b/assets/sample.html
@@ -11,13 +11,13 @@
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96x96.png">
     <meta name="description" content="Pluto.jl notebook" />
     
-    <script src="/assets/client.js"></script>
-    <script src="/assets/filepicker.js"></script>
+    <script src="assets/client.js"></script>
+    <script src="assets/filepicker.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.js"></script>
@@ -25,18 +25,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.css">
 
-    <link rel="stylesheet" href="/assets/welcome.css">
+    <link rel="stylesheet" href="assets/welcome.css">
 
 </head>
 
 <body>
     <div id="title">
-        <h1>welcome to <img src="/assets/logo.svg"><span class="phantom"> ot emoclew</span></h1>
+        <h1>welcome to <img src="assets/logo.svg"><span class="phantom"> ot emoclew</span></h1>
             <main>
             <p class="new">Samples:</p>
             <ul class="new">
-                <li>1. <a href="/sample/basic.jl">Welcome</a></li>
-                <li>2. <a href="/sample/ui.jl">Interactivity</a></li>
+                <li>1. <a href="sample/basic.jl">Welcome</a></li>
+                <li>2. <a href="sample/ui.jl">Interactivity</a></li>
                 <li>&#160&#160&#160<i>More to come...</i></li>
             </ul>
         </main>
