--- a/assets/welcome.html
+++ b/assets/welcome.html
@@ -2,29 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta name="viewport" content="width=device-width" />
     <title>⚡ Pluto.jl ⚡</title>
     <meta charset="utf-8" />
     <script>
         console.log("Pluto.jl, by Fons van der Plas (https://github.com/fonsp) and Mikołaj Bochenski (https://github.com/malyvsen) 🌈");
-        </script>
+    </script>
     <meta name="author" content="Fons van der Plas; Mikołaj Bochenski" />
     <link rel="license" href="https://github.com/fonsp/Pluto.jl/blob/master/LICENSE" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96x96.png">
-    <meta name="description" content="Pluto.jl notebook" />
-    
-    <script src="assets/client.js"></script>
-    <script src="assets/filepicker.js"></script>
-    
-    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/display/placeholder.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.css"></script>
+    <meta name="description" content="Pluto.jl notebooks" />
 
+    <script src="assets/client.js" defer></script>
+    <script src="assets/filepicker.js" defer></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/display/placeholder.min.js" defer></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.css">
+
+    <script src="assets/welcome.js" defer></script>
     <link rel="stylesheet" href="assets/welcome.css">
 
 </head>
@@ -32,16 +33,16 @@
 <body class="loading nosessions">
     <div id="title">
         <h1>welcome to <img src="assets/logo.svg"><span class="phantom"> ot emoclew</span></h1>
-            <main>
+        <main>
             <p class="new">New session:</p>
             <ul class="new">
                 <li>Open a <a href="sample">sample notebook</a></li>
                 <li>Create a <a href="new">new notebook</a></li>
                 <li>Open from file:
-                <filepicker>
+                    <filepicker>
 
-                    <button>Open</button>
-                </filepicker>
+                        <button>Open</button>
+                    </filepicker>
                 </li>
             </ul>
             <br class="running" />
@@ -49,8 +50,6 @@
             <ul class="running"></ul>
         </main>
     </div>
-
-    <script src="assets/welcome.js"></script>
 </body>
 
 </html>
