--- a/assets/editor.html
+++ b/assets/editor.html
@@ -646,6 +646,26 @@
     <!-- The instant feedback form at the bottom of the page uses Google Firestore to save feedback and statistics. We DO NOT use Google Analytics, and NO DATA is sent except for data entered in the feedback form and anonymous statistics. See /statistics-info for more details. -->
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-app.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-firestore.js" defer></script>
+
+    <!-- MathJax config must be set before loading -->
+    <script>
+        MathJax = {
+            options: {
+                ignoreHtmlClass: "no-MαθJax",
+                processHtmlClass: "tex",
+            },
+            startup: {
+                typeset: true,
+            },
+            tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']],
+            },
+            svg: {
+                fontCache: 'global',
+            },
+        };
+    </script>
+    <script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg-full.js" async></script>
 </head>
 
 <body class="loading no-MαθJax">
@@ -708,31 +728,11 @@
             </form>
         </div>
     </footer>
-
+    
     <script src="assets/bond.js" defer></script>
     <script src="assets/editor.js" defer></script>
     <script src="assets/feedback.js" defer></script>
     <script src="assets/treeview.js" defer></script>
-
-    <script>
-        MathJax = {
-            options: {
-                ignoreHtmlClass: "no-MαθJax",
-                processHtmlClass: "tex",
-            },
-            startup: {
-                typeset: false,
-            },
-            tex: {
-                inlineMath: [['$', '$'], ['\\(', '\\)']],
-            },
-            svg: {
-                fontCache: 'global',
-            },
-        };
-    </script>
-    <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
-    </script>
 </body>
 
 </html>
