--- a/assets/editor.html
+++ b/assets/editor.html
@@ -18,622 +18,9 @@
 
     <script src="assets/client.js" defer></script>
     <script src="assets/filepicker.js" defer></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap');
-        @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese');
 
-        /* GENERAL PAGE LAYOUT */
-        html {
-            font-size: 17px;
-        }
-
-        body {
-            margin: 0px;
-            overflow-anchor: none;
-        }
-
-        /* more sensible defaults for html tags: */
-        /* (can be overriden by custom style) */
-
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            font-family: sans-serif;
-            margin-block-start: 1rem;
-            margin-block-end: 0rem;
-        }
-
-        h1 {
-            font-size: 2.2rem;
-            border-bottom: 3px solid rgba(0, 0, 0, .15);
-            margin-bottom: .5rem;
-        }
-
-        h2 {
-            font-size: 1.8rem;
-            border-bottom: 2px dotted rgba(0, 0, 0, .15);
-            margin-bottom: .5rem;
-        }
-
-        h3 {
-            font-size: 1.6rem;
-            /* border-bottom: 2px dotted rgba(0,0,0,.15); */
-        }
-
-        h4 {
-            font-size: 1.4rem;
-        }
-
-        h5 {
-            font-size: 1.2rem;
-        }
-
-        h6 {
-            font-size: 1rem;
-        }
-
-        p {
-            margin-block-start: .5rem;
-        }
-
-        celloutput img {
-            max-width: 100%;
-        }
-
-        /* html,
-        body {
-            height: 100%;
-        } */
-
-        main {
-            margin: 0 auto;
-            margin-top: 100px;
-            margin-bottom: 4rem;
-            min-height: calc(100vh - 100px - 3.5rem - 4rem);
-            max-width: 960px;
-            align-content: center;
-        }
-
-        /* HEADER */
-
-        body>header {
-            position: absolute;
-            top: 0px;
-            z-index: 5;
-            background: hsla(0, 100%, 100%, 80%);
-            width: 100%;
-            min-height: 60px;
-            overflow: hidden;
-            /* white-space: nowrap; */
-            /*font-weight: normal;*/
-            border-bottom: solid 1px rgba(0, 0, 0, .1);
-        }
-
-
-        body>header h1 {
-            color: black;
-            letter-spacing: 2px;
-        }
-
-        #logocontainer {
-            margin: 0 auto;
-            max-width: 960px;
-            padding-left: 20px;
-            padding-bottom: 0px;
-            flex-wrap: wrap;
-            min-height: 60px;
-            display: flex;
-            flex-direction: row;
-        }
-
-        #logocontainer>* {
-            flex: 0 0 auto;
-            align-self: center;
-            margin: 10px 0px;
-        }
-
-        #logocontainer>a {
-            margin-right: 2rem;
-        }
-
-        #logocontainer img {
-            height: 39px;
-            margin-bottom: -11px;
-        }
-
-        #logocontainer h1 {
-            font-weight: 700;
-            font-size: 1.8rem;
-            display: inline;
-            border-bottom: none;
-            margin-right: 50px;
-        }
-
-        #logocontainer h2 {
-            display: inline;
-            border-bottom: none;
-        }
-
-        #logocontainer h1>span {
-            font-weight: 400;
-        }
-
-        filepicker {
-            display: flex;
-            flex-direction: row;
-        }
-
-        filepicker .CodeMirror {
-            height: calc(1rem + 4px + 4px);
-            max-width: calc(100vw - 60px - 20px - 20px);
-            display: inline-block;
-            min-width: 10rem;
-            opacity: .6;
-            font-style: normal;
-            font-weight: 500;
-            font-family: 'Roboto Mono', monospace !important;
-            font-size: 0.75rem;
-            letter-spacing: 1px;
-            background: none;
-            border: 2px solid #818181;
-            border-radius: 3px;
-
-            border-right: none;
-            border-top-right-radius: 0;
-            border-bottom-right-radius: 0;
-        }
-
-        filepicker .CodeMirror-scroll {
-            overflow: hidden !important;
-        }
-
-        filepicker button {
-            height: calc(1rem + 4px + 4px + 4px);
-            cursor: pointer;
-            border-top-left-radius: 0 !important;
-            border-bottom-left-radius: 0 !important;
-        }
-
-        #logocontainer:after {
-            margin-left: auto;
-            align-self: center;
-        }
-
-        li.file.new.CodeMirror-hint:before {
-            content: "👉 ";
-        }
-
-        li.file.CodeMirror-hint:before {
-            content: "📄 ";
-        }
-
-        li.dir.CodeMirror-hint:before {
-            content: "📁 ";
-        }
-
-        @media screen and (any-pointer: fine) {
-            #logocontainer .CodeMirror {
-                border: 2px solid transparent;
-                border-right: none;
-                transition: border .15s ease-in-out;
-            }
-
-            #logocontainer button {
-                opacity: 0.0;
-                transition: opacity .15s ease-in-out;
-            }
-
-            body>header:hover #logocontainer .CodeMirror,
-            body>header:focus-within #logocontainer .CodeMirror {
-                border: 2px solid #818181;
-                border-right: none;
-            }
-
-            body>header:hover #logocontainer button,
-            body>header:focus-within #logocontainer button {
-                opacity: 1.0;
-            }
-
-
-        }
-
-
-
-        body.disconnected>header {
-            background-color: rgba(255, 169, 114, 0.56);
-            position: fixed;
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-        }
-
-        #logocontainer:after {
-            font-family: 'Roboto Mono';
-            padding: 10px;
-        }
-
-        body.disconnected>header>#logocontainer:after {
-            content: "DISCONNECTED";
-        }
-
-        body.loading>header>#logocontainer:after {
-            content: "Loading...";
-        }
-
-        /* MAIN */
-
-        preamble {
-            display: flex;
-            position: relative;
-        }
-
-        main>preamble>button {
-            display: none;
-        }
-
-        body.code-differs>main>preamble>button {
-            display: block;
-        }
-
-        cell {
-            display: block;
-            min-height: 1rem;
-        }
-
-        celloutput {
-            display: block;
-            padding-left: 10px;
-            padding-right: 10px;
-        }
-
-        celloutput>assignee::after {
-            content: "\a0=\a0";
-            opacity: .6;
-        }
-
-        celloutput>assignee:empty {
-            display: none;
-        }
-
-        cell.inline-output>celloutput {
-            display: flex;
-        }
-
-        celloutput>assignee,
-        code {
-            font-family: monospace;
-            font-size: .75em;
-        }
-
-        cell.error>code {
-            color: darkred;
-        }
-
-        cellinput .CodeMirror {
-            height: auto !important;
-            width: 100%;
-            z-index: 2;
-            min-height: calc(28px - 1px - 1px);
-        }
-
-        cellinput .CodeMirror-scroll {
-            min-height: 0px;
-        }
-
-        cellinput .CodeMirror-empty {
-            color: rgba(0, 0, 0, .15);
-        }
-
-        cell.code-folded>cellinput {
-            display: none;
-        }
-
-        cell.output-notinsync>cellinput,
-        cell.code-differs>cellinput {
-            display: unset;
-        }
-
-        trafficlight {
-            pointer-events: none;
-            width: 4px;
-            position: absolute;
-            left: -4px;
-            top: 0px;
-            bottom: 0px;
-        }
-
-        /* In ascending order of severity: */
-
-
-        cell.warning>trafficlight {
-            background: orange;
-        }
-
-        cell.error>trafficlight {
-            background: red;
-        }
-
-        cell.running>trafficlight {
-            background: yellow;
-        }
-
-        cell.dependent>trafficlight {
-            background: lightblue;
-        }
-
-        clickshoulder {
-            position: absolute;
-            top: 0px;
-            bottom: 0px;
-            width: 2000px;
-            left: -2000px;
-            cursor: move;
-        }
-
-        clickshoulder:hover {
-            background: rgba(0, 0, 0, .05);
-            background-clip: padding-box;
-        }
-
-        cell>button>span,
-        cellinput>button>span {
-            pointer-events: none;
-        }
-
-        button.runallchanged>span::after {
-            content: "Submit all changes ▶▶";
-        }
-
-        button.addcell>span::after {
-            content: "+";
-        }
-
-        button.deletecell>span::after {
-            content: "🚮";
-        }
-
-        button.runcell>span::after {
-            content: "▶";
-        }
-
-        cell.code-folded>runarea {
-            display: none;
-        }
-
-        cell.output-notinsync>runarea,
-        cell.code-differs>runarea {
-            display: block;
-        }
-
-        dropruler {
-            position: absolute;
-            left: 0px;
-            right: 0px;
-            height: 4px;
-            background: rgba(0, 0, 0, .50);
-            display: none;
-        }
-
-        confirmationdialog {
-            position: absolute;
-            display: none;
-            background: white;
-        }
-
-        confirmationdialog>span#question::after {
-            content: "Delete cell? ";
-        }
-
-        confirmationdialog>span#optionsep::after {
-            content: " / ";
-        }
-
-        confirmationdialog>button#yes>span::after {
-            content: "yes";
-        }
-
-        confirmationdialog>button#no>span::after {
-            content: "no";
-        }
-
-        #helpbox-wrapper {
-            display: none;
-        }
-
-        @media screen and (min-width: 1050px) {
-
-            #helpbox-wrapper {
-                display: block;
-                position: sticky;
-                bottom: 0px;
-                height: 0px;
-                z-index: 5;
-            }
-
-            helpbox {
-                bottom: 0px;
-                right: 20px;
-                position: absolute;
-                display: flex;
-                flex-direction: column;
-                width: 300px;
-                height: 400px;
-                /* overflow: hidden; */
-
-                background-color: white;
-                /* border: 2px solid darkgray; */
-                border-right: none;
-                border-bottom: none;
-                border-top-left-radius: 9px;
-                box-shadow: 0 0 11px 0px #00000010;
-                font-family: "Alegreya Sans", sans-serif;
-            }
-
-            helpbox>header {
-                background-color: #eef1f7;
-                color: hsl(230, 14%, 11%);
-                padding: 15px;
-                font-family: "Roboto Mono", monospace;
-                font-weight: 500;
-                cursor: pointer;
-                /* border-top: 4px solid #8a8a8a; */
-            }
-
-            helpbox>section {
-                height: 100%;
-                overflow: auto;
-                padding: 10px;
-            }
-
-            helpbox>section h1,
-            helpbox>section h2,
-            helpbox>section h3,
-            helpbox>section h4,
-            helpbox>section h5,
-            helpbox>section h6 {
-                font-family: inherit;
-                border-bottom: none;
-                font-size: 1rem;
-            }
-
-            helpbox>section h1 {
-                font-size: 1.3rem;
-            }
-
-            helpbox.hidden {
-                height: initial;
-            }
-
-            helpbox.hidden>section {
-                display: none;
-            }
-
-            helpbox>header::before {
-                content: "📖 ";
-            }
-
-            /* helpbox.loading>header::before{
-                content: "⌛ ";
-            } */
-
-            helpbox.hidden>header::before {
-                content: "📚 ";
-            }
-
-
-        }
-
-        @media screen and (min-width: 1050px) and (max-width: 1400px) {
-            main {
-                margin-right: 350px;
-            }
-        }
-
-
-        footer {
-            width: 100%;
-            height: 3.5rem;
-            font-family: "Roboto Mono";
-            font-size: .75rem;
-            background-color: #d7dcd3;
-            color: #333333;
-            z-index: 7;
-        }
-
-        footer form {
-            height: 1.5rem;
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-end;
-        }
-
-        footer form>* {
-            flex: 0 0 auto;
-            margin-left: .5rem;
-        }
-
-        footer form a,
-        footer form label {
-            align-self: center;
-        }
-
-        footer form>a {
-            margin-right: auto;
-        }
-
-        footer a {
-            color: black;
-            opacity: .6;
-            font-weight: 700;
-        }
-
-        @media (max-width: 650px) {
-            footer form>label {
-                display: none;
-            }
-        }
-
-        footer input {
-            border: 2px solid #818181;
-            font-family: "Roboto Mono";
-
-            border-radius: 3px;
-            padding: 3px;
-        }
-
-        body>header button,
-        footer button {
-            background: #896c6c;
-            border-radius: 3px;
-            border: 2px solid #896c6c;
-
-            color: white;
-            /* border: none; */
-            font-family: "Roboto Mono";
-            font-weight: 600;
-            font-size: .75rem;
-        }
-
-        #info {
-            max-width: 9400px;
-            margin: 0 auto;
-            text-align: right;
-            padding: 1rem;
-        }
-
-        @media print {
-            main {
-                margin-top: 20px;
-            }
-
-            body {
-                font-size: 14px;
-            }
-
-            body>header,
-            preamble>button,
-            cell>button,
-            cellinput>button,
-            clickshoulder,
-            footer,
-            runarea {
-                display: none !important;
-            }
-
-            celloutput img {
-                max-width: 80%;
-                display: block;
-                margin: 0 auto;
-                margin-block-end: 1rem;
-            }
-
-            #info::before {
-                content: "Generated using";
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="assets/editor.css" type="text/css" />
+    <link rel="stylesheet" href="assets/hide-ui.css" type="text/css" media="print" />
 
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/stdlib@3.3.1/dist/stdlib.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.js" defer></script>
@@ -644,7 +31,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/lib/codemirror.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.53.2/addon/hint/show-hint.min.css">
 
-    <link rel="stylesheet" href="assets/light.css" />
     <link rel="stylesheet" href="assets/treeview.css" />
     <!-- The instant feedback form at the bottom of the page uses Google Firestore to save feedback and statistics. We DO NOT use Google Analytics, and NO DATA is sent except for data entered in the feedback form and anonymous statistics. See /statistics-info for more details. -->
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-app.js" defer></script>
@@ -675,7 +61,7 @@
     <header>
         <div id="logocontainer">
             <a href="./">
-                <h1><img src="assets/logo.svg" alt="Pluto.jl" /></h1>
+                <h1><img id="logo-big" src="assets/logo.svg" alt="Pluto.jl" /><img id="logo-small" src="assets/favicon_unsaturated.svg" alt="" /></h1>
             </a>
             <filepicker>
 
@@ -693,9 +79,9 @@
         <dropruler></dropruler>
         <template id="celltemplate">
             <cell>
-                <clickshoulder draggable="true" title="Drag to move cell">
+                <cellshoulder draggable="true" title="Drag to move cell">
                     <button class="foldcode" title="Show/hide code"><span></span></button>
-                </clickshoulder>
+                </cellshoulder>
                 <trafficlight></trafficlight>
                 <button class="addcell before" title="Add cell"><span></span></button>
                 <celloutput tabindex="1">
