--- a/assets/sample.html
+++ b/assets/sample.html
@@ -22,7 +22,7 @@
 
 <body>
     <div id="title">
-        <h1>welcome to <img src="assets/logo.svg"><span class="phantom"> ot emoclew</span></h1>
+        <h1>welcome to <img src="assets/logo.svg"></h1>
         <main>
             <p class="new">Samples:</p>
             <ul class="new">
